--- a/src/components/panel/panel.html
+++ b/src/components/panel/panel.html
@@ -1,30 +1,20 @@
 <article class="m-panel" :class="{ 'm--is-primary': type != 'secondary',
                 'm--is-secondary': type == 'secondary',
                 'm--no-shadow': !shadow,
-                'm--no-border': !border,
-                'm--no-padding': !padding,
-                'm--no-padding-header': !paddingHeader,
-                'm--no-padding-body': !paddingBody,
-                'm--no-padding-footer': !paddingFooter }">
-    <header class="m-panel__header" v-if="hasHeader">
-        <slot name="header"></slot>
-        <span class="m-panel__header__content m--is-left" v-if="hasContentLeft">
+                'm--no-border': !border }">
+    <header class="m-panel__header" :class="{ 'm--no-padding': !paddingHeader || !padding }"v-if="hasHeader">
+        <span class="m-panel__header__content-left" v-if="hasContentLeft">
             <slot name="header-content-left"></slot>
         </span>
-        <span class="m-panel__header__content m--is-right" v-if="hasContentRight">
+        <slot name="header"></slot>
+        <span class="m-panel__header__content-right" v-if="hasContentRight">
             <slot name="header-content-right"></slot>
         </span>
     </header>
-    <div class="m-panel__body">
-        <slot>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas iaculis nibh eu diam pellentesque lobortis. Duis
-            mattis vel orci at luctus. Fusce vitae eros quis diam iaculis imperdiet quis vitae sapien. Aliquam blandit commodo
-            arcu et vehicula. Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-            cubilia Curae; Donec vehicula condimentum elementum. Sed laoreet est eget lorem tristique condimentum. Vestibulum
-            at odio orci. Duis nisl erat, aliquam non tortor et, dapibus maximus nulla. Mauris lobortis, orci nec lobortis
-            faucibus, nisi justo eleifend erat, sed convallis velit mi non lacus. Pellentesque habitant morbi tristique senectus
-            et netus et malesuada fames ac turpis egestas.</slot>
+    <div class="m-panel__body" :class="{ 'm--no-padding': !paddingBody || !padding }">
+        <slot>m-panel needs default slot</slot>
     </div>
-    <footer class="m-panel__footer" v-if="hasFooter">
+    <footer class="m-panel__footer" :class="{ 'm--no-padding': !paddingFooter || !padding }" v-if="hasFooter">
         <slot name="footer"></slot>
     </footer>
 </article>
