--- a/src/components/panel/panel.scss
+++ b/src/components/panel/panel.scss
@@ -1,5 +1,4 @@
 @import 'abstracts/variables';
-
 $m-panel--border-width: 1px;
 
 .m-panel {
@@ -42,55 +41,44 @@ $m-panel--border-width: 1px;
         border: 0;
     }
 
-    &.m--no-padding {
-        .m-panel__header,
-        .m-panel__body,
-        .m-panel__footer {
-            padding: 0;
+    &__header {
+        display: grid;
+        align-items: center;
+        grid-template-columns: 1fr auto;
+
+        @media screen and (max-width: 640px) {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        &:not(.m--no-padding) {
+            padding: $m-padding;
+        }
+
+        &,
+        &__content-left,
+        &__content-right {
+            > :first-child {
+                margin-top: 0;
+            }
+        }
+
+        &__content {
+            &-right {
+                justify-self: flex-end;
+            }
         }
     }
 
-    &.m--no-padding-header {
-        .m-panel__header {
-            padding: 0;
+    &__body,
+    &__footer {
+        &:not(.m--no-padding) {
+            padding: 0 $m-padding $m-padding $m-padding;
         }
     }
 
-    &.m--no-padding-body {
-        .m-panel__body {
-            padding: 0;
-        }
+    &__footer {
+        border-top: 1px solid $m-color--grey;
     }
-
-    &.m--no-padding-footer {
-        .m-panel__footer {
-            padding: 0;
-        }
-    }
-
-    .m-panel__header,
-    .m-panel__body,
-    .m-panel__footer {
-        padding: $m-padding;
-    }
-}
-
-.m-panel__header {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 1fr auto;
-
-    @media screen and (max-width: 640px) {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .m-panel__header__content.m--is-right {
-        justify-self: flex-end;
-    }
-}
-
-.m-panel__footer {
-    border-top: 1px solid $m-color--grey;
 }
