--- a/src/components/spinner/spinner.scss
+++ b/src/components/spinner/spinner.scss
@@ -27,9 +27,13 @@ $m-loading-speed: 0.7s;
                 &__description {
                     color: $m-color--white;
                 }
+            }
+        }
 
-                &__circle-background {
-                    stroke: $m-color--white;
+        &.m--is-light {
+            .m-spinner {
+                &__icon {
+                    border-color: $m-color--ul-yellow $m-color--white $m-color--white $m-color--white;
                 }
             }
         }
@@ -44,8 +48,8 @@ $m-loading-speed: 0.7s;
 
         &.m--is-dark {
             .m-spinner {
-                &__circle-background {
-                    stroke: $m-color--grey;
+                &__icon {
+                    border-color: $m-color--ul-yellow $m-color--grey $m-color--grey $m-color--grey;
                 }
             }
         }
